--- a/Modules/CreatePlan/CreatePlan.html
+++ b/Modules/CreatePlan/CreatePlan.html
@@ -151,8 +151,8 @@
             </div>
 
             <div class="card-footer">
-              <button ng-click="AddData()" class="btn btn-primary">Submit</button>
-              <button ng-click="init()" class="btn btn-default">Close</button>
+              <button ng-click="Create()" class="btn btn-primary">Submit</button>
+              <button ng-click="Back()" class="btn btn-default">Close</button>
             </div>
           </form>
         </div>
