--- a/Modules/ManageAudit/ManageAudit.html
+++ b/Modules/ManageAudit/ManageAudit.html
@@ -547,8 +547,8 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
-                            <button ng-click="init()" class="btn btn-success">Submit</button>
+                            <button ng-click="SaveAsDraft()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AuditCreate()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
                         <div class="card">
@@ -611,8 +611,8 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
-                            <button ng-click="init()" class="btn btn-success">Submit</button>
+                            <button ng-click="SaveAsDraft()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AuditCreate()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
 
