--- a/login.html
+++ b/login.html
@@ -139,7 +139,7 @@
               </div><!--inpiu-->
               <div class="btn_div">
 
-                <a href="" ng-click="Login()" class="btn btn-blue">Log In</a>
+                <a ng-click="Login()" class="btn btn-blue">Log In</a>
               </div>
             </div><!--title-->
           </div><!--inner-->
