commit my new chnges

--- a/Modules/Audit/Audit.html
+++ b/Modules/Audit/Audit.html
@@ -17,7 +17,7 @@
                 <tr>
 
                   <th>Audit Area Name </th>
-                  <th>Categories </th>
+                  <th>Category </th>
                   <th>Action</th>
 
 
@@ -100,7 +100,7 @@
 
 
                   <div class="form-group">
-                    <label class="form_label">Categories</label>
+                    <label class="form_label">Category</label>
                     <select class="form-control">
                       <option>Select</option>
                       <option>Education and training</option>
@@ -118,7 +118,7 @@
                   </div>
 
                 </div>
-                <div class="col-sm-4">
+                <!--<div class="col-sm-4">
 
 
                   <div class="form-group">
@@ -126,7 +126,7 @@
                     <input type="date" class="form-control inputbox_css">
                   </div>
 
-                </div>
+                </div>-->
 
 
 
