--- a/Modules/ManageAudit/ManageAudit.html
+++ b/Modules/ManageAudit/ManageAudit.html
@@ -7,7 +7,7 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Audit Area Details</h3>
-              <a href="" ng-click="AddAuditArea()" class="btn btn-blue"> <img src="dist/img/icons/traffic-data.png" class="side_imgmaster mr-1">Add Audit Area</a>
+              <!--<a href="" ng-click="AddAuditArea()" class="btn btn-blue"> <img src="dist/img/icons/traffic-data.png" class="side_imgmaster mr-1">Add Audit Area</a>-->
             </div>
           </div>
           <!-- /.card-header -->
@@ -34,7 +34,7 @@
                 <tr class="tbody_data">
 
 
-                  <td>Vendor</td>
+                  <td>Vendor1</td>
                   <td>12-2-2022</td>
                   <td>12-4-2022</td>
                   <td>abc</td>
@@ -58,7 +58,7 @@
                 <tr class="tbody_data">
 
 
-                  <td>Vendor</td>
+                  <td>Vendor2</td>
                   <td>12-2-2022</td>
                   <td>12-4-2022</td>
                   <td>abc</td>
@@ -87,9 +87,9 @@
         <!-- /.card -->
         <div class="card" ng-show="Auditarea1==true">
           <div class="card-header">
-            <div class="header_card">
-              <h3 class="card-title">Audit Area Details</h3>
-
+            <div class="header_card d-flex justify-content-between">
+              <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+            
             </div>
           </div>
           <!-- /.card-header -->
@@ -205,7 +205,8 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
         <div class="card" ng-show="Auditarea2==true">
           <div class="card-header">
             <div class="header_card">
-              <h3 class="card-title">Audit Area Details</h3>
+              <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+
             </div>
           </div>
           <div class="card-body">
@@ -441,7 +442,8 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
 
         <div class="card card-default">
           <div class="card-header">
-            <h3 class="card-title">Audit Area Details</h3>
+            <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
+
           </div>
 
 
@@ -503,11 +505,12 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                     <div class="mr-3">
                                       <input type="radio" id="html" name="fav_language" value="HTML" class="chek_box"><img src="dist/img/icons/triangle.png" class="diacisq_css">
                                     </div>
-                                    <div class="mr-3">
-                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
-                                    </div>
+
                                     <div class="mr-3">
                                       <input type="radio" id="javascript" name="fav_language" value="JavaScript" class="chek_box"><img src="dist/img/icons/square.png" class="diacisq_css">
+                                    </div>
+                                    <div class="mr-3">
+                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
                                     </div>
                                   </div>
                                 </div>
@@ -516,7 +519,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                   <thead>
                                     <tr>
                                       <th scope="col">Remarks</th>
-                                      <th scope="col">Uplaod File</th>
+                                      <th scope="col">Upload File</th>
                                       <th>Action</th>
 
                                     </tr>
@@ -567,11 +570,12 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                     <div class="mr-3">
                                       <input type="radio" id="html" name="fav_language" value="HTML" class="chek_box"><img src="dist/img/icons/triangle.png" class="diacisq_css">
                                     </div>
-                                    <div class="mr-3">
-                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
-                                    </div>
+
                                     <div class="mr-3">
                                       <input type="radio" id="javascript" name="fav_language" value="JavaScript" class="chek_box"><img src="dist/img/icons/square.png" class="diacisq_css">
+                                    </div>
+                                    <div class="mr-3">
+                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
                                     </div>
                                   </div>
                                 </div>
@@ -580,7 +584,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                   <thead>
                                     <tr>
                                       <th scope="col">Remarks</th>
-                                      <th scope="col">Uplaod File</th>
+                                      <th scope="col">Upload File</th>
                                       <th>Action</th>
 
                                     </tr>
@@ -634,11 +638,12 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                     <div class="mr-3">
                                       <input type="radio" id="html" name="fav_language" value="HTML" class="chek_box"><img src="dist/img/icons/triangle.png" class="diacisq_css">
                                     </div>
-                                    <div class="mr-3">
-                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
-                                    </div>
+
                                     <div class="mr-3">
                                       <input type="radio" id="javascript" name="fav_language" value="JavaScript" class="chek_box"><img src="dist/img/icons/square.png" class="diacisq_css">
+                                    </div>
+                                    <div class="mr-3">
+                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
                                     </div>
                                   </div>
                                 </div>
@@ -647,7 +652,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                   <thead>
                                     <tr>
                                       <th scope="col">Remarks</th>
-                                      <th scope="col">Uplaod File</th>
+                                      <th scope="col">Upload File</th>
                                       <th>Action</th>
 
                                     </tr>
@@ -705,11 +710,12 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                     <div class="mr-3">
                                       <input type="radio" id="html" name="fav_language" value="HTML" class="chek_box"><img src="dist/img/icons/triangle.png" class="diacisq_css">
                                     </div>
-                                    <div class="mr-3">
-                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
-                                    </div>
+
                                     <div class="mr-3">
                                       <input type="radio" id="javascript" name="fav_language" value="JavaScript" class="chek_box"><img src="dist/img/icons/square.png" class="diacisq_css">
+                                    </div>
+                                    <div class="mr-3">
+                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
                                     </div>
                                   </div>
                                 </div>
@@ -718,7 +724,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                   <thead>
                                     <tr>
                                       <th scope="col">Remarks</th>
-                                      <th scope="col">Uplaod File</th>
+                                      <th scope="col">Upload File</th>
                                       <th>Action</th>
 
                                     </tr>
@@ -773,11 +779,12 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                     <div class="mr-3">
                                       <input type="radio" id="html" name="fav_language" value="HTML" class="chek_box"><img src="dist/img/icons/triangle.png" class="diacisq_css">
                                     </div>
-                                    <div class="mr-3">
-                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
-                                    </div>
+
                                     <div class="mr-3">
                                       <input type="radio" id="javascript" name="fav_language" value="JavaScript" class="chek_box"><img src="dist/img/icons/square.png" class="diacisq_css">
+                                    </div>
+                                    <div class="mr-3">
+                                      <input type="radio" id="css" name="fav_language" value="CSS" class="chek_box"><img src="dist/img/icons/new-moon.png" class="diacisq_css">
                                     </div>
                                   </div>
                                 </div>
@@ -786,7 +793,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                                   <thead>
                                     <tr>
                                       <th scope="col">Remarks</th>
-                                      <th scope="col">Uplaod File</th>
+                                      <th scope="col">Upload File</th>
                                       <th>Action</th>
 
                                     </tr>
