--- a/Modules/EmployeeMaster/EmployeeMaster.html
+++ b/Modules/EmployeeMaster/EmployeeMaster.html
@@ -52,7 +52,7 @@
 
         <div class="card card-default">
           <div class="card-header">
-            <h3 class="card-title">Vendor Details</h3>
+            <h3 class="card-title">Employee Details</h3>
           </div>
 
 
@@ -87,8 +87,8 @@
                     <label class="form_label">Employee Role</label>
                     <select class="form-control">
                       <option>Select</option>
-                      <option>Employee 1</option>
-                      <option>Employee  2</option>
+                      <option>Admin</option>
+                      <option>Auditor</option>
 
                     </select>
                   </div>
