--- a/Modules/PendingPlan/PendingPlan.html
+++ b/Modules/PendingPlan/PendingPlan.html
@@ -5,9 +5,9 @@
 
     <div class="row">
       <div class="col-12">
-        <div class="card">
+        <div class="card" ng-show="Pending==true">
           <div class="card-header">
-            <div class="header_card"ng-show="Pending==true">
+            <div class="header_card">
               <h3 class="card-title">Pending Plan Details</h3>
 
             </div>
@@ -77,7 +77,7 @@
         <div class="card" ng-show="PendingPlanDetail==true">
           <div class="card-header">
             <div class="header_card">
-              <h3 class="card-title">Pending Plan Details</h3>
+              <h3 class="card-title">Pending Plan Details<small>(This will be avauilable for Vendor for approval )</small></h3>
 
             </div>
           </div>
