--- a/Modules/Regulation/Regulation.html
+++ b/Modules/Regulation/Regulation.html
@@ -28,10 +28,22 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>Arvind</td>
+                  <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
                   <td>12345</td>
-                  <td>Categories1</td>
-                  <td>ABCCCC</td>
+                  <td>Production preparation</td>
+                  <td>Regarding implementation rule of production preparation</td>
+                  <td>12-2-2022</td>
+
+                  <td>
+                    <a ng-click="AddRegulation()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
+                  <td>12345</td>
+                  <td>Production preparation</td>
+                  <td>Regarding implementation rule of production preparation</td>
                   <td>12-2-2022</td>
 
                   <td>
@@ -77,7 +89,7 @@
                   <div class="form-group">
                     <label class="form_label">Regulation Code</label>
                     <input type="text" class="form-control inputbox_css" ng-model="influencerObj.FirstName"
-                           placeholder="Enter Regulation Code" maxlength="200">
+                           placeholder="Enter Regulation Code" maxlength="200" disabled>
                   </div>
 
                 </div>
@@ -111,14 +123,14 @@
                     <label class="form_label">Audit Area</label>
                     <select class="form-control">
                       <option>Select</option>
-                      <option>Employee 1</option>
-                      <option>Employee  2</option>
+                      <option>Regarding implementation rule of production preparation </option>
+                      <option>Regarding implementation rule of production preparation </option>
 
                     </select>
                   </div>
 
                 </div>
-                <div class="col-sm-4">
+                <!--<div class="col-sm-4">
 
 
                   <div class="form-group">
@@ -126,7 +138,7 @@
                     <input type="date" class="form-control inputbox_css">
                   </div>
 
-                </div>
+                </div>-->
 
 
 
