--- a/Modules/ViewPlan/ViewPlan.html
+++ b/Modules/ViewPlan/ViewPlan.html
@@ -66,7 +66,7 @@
                     <td>
                       <a ng-click="ViewPlan()"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
 
-                      <a ng-click="Asign()"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
+                      <a ng-click="Asign()" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
                     </td>
 
                   </tr>
@@ -126,7 +126,7 @@
           <div class="card-footer text-right">
 
             <button type="button" class="btn btn-primary" ng-click="assign()">Assign</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal" style="padding:10px;" ng-click="AsignClose()">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="AsignClose()">Close</button>
           </div>
         </div>
         <div class="card" ng-show="myVar1==true">
@@ -285,8 +285,8 @@
           <!-- /.card-body -->
           <div class="card-footer">
 
-            <button type="button" class="btn btn-primary" ng-click="Submit()">Submit</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="Close()" style="padding:10px;">Close</button>
+            <!--<button type="button" class="btn btn-primary" ng-click="Submit()">Submit</button>-->
+            <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="Close()" >Close</button>
           </div>
         </div>
       </div>
@@ -311,7 +311,7 @@
       <div class="modal-footer">
 
         <button type="button" class="btn btn-primary">Save changes</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal" style="padding:10px;">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
