--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </li>
 
       </ul>
-      <img src="dist/img/maruti-logo.png" class="w_204">
+   <h4>Vendor Management System</h4>
       <!-- Right navbar links -->
       <ul class="navbar-nav">
         <!-- Navbar Search -->
@@ -93,19 +93,19 @@
       <!-- Sidebar -->
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-          <!-- <div class="image">
-            <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
-          </div>
+        <div class="user-panel">
+        
+            <img src="dist/img/maruti-logo.png" class="w_190">
+         
           <div class="info">
-            <a href="#" class="d-block">Alexander Pierce</a>
-          </div> -->
+            <a href="#" class="d-block"></a>
+          </div> 
         </div>
         <!-- Sidebar Menu -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
-            with font-awesome or any other icon font library -->
+  with font-awesome or any other icon font library -->
             <li class="nav-item">
               <a href="#/" class="nav-link active">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -189,7 +189,7 @@
                     </p>
                   </a>
                 </li>
-                <li class="nav-item" ng-show="RoleName=='Admin'">
+                <li class="nav-item">
                   <a href="#/ViewPlan" class="nav-link">
                     <img src="dist/img/icons/view.png" class="side_img">
                     <p>
@@ -198,7 +198,7 @@
                     </p>
                   </a>
                 </li>
-                <li class="nav-item" ng-show="RoleName=='Vender'">
+                <li class="nav-item">
                   <a href="#/PendingPlan" class="nav-link">
                     <img src="dist/img/icons/planning.png" class="side_img">
                     <p>
@@ -221,7 +221,15 @@
               </a>
 
             </li>
-
+            <li class="nav-item">
+              <a href="#/" class="nav-link">
+                <i class="nav-icon fas fa-tachometer-alt"></i>
+                <p>
+                  Reports
+                  <i class="right fas fa-angle-left"></i>
+                </p>
+              </a>
+            </li>
 
           </ul>
         </nav>
