new client feedback

--- a/Modules/ManageAudit/ManageAudit.html
+++ b/Modules/ManageAudit/ManageAudit.html
@@ -7,12 +7,18 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Audit Area Details</h3>
+              <!--<div class="search-container">
+                <div class="autocomplete">
+                  <input id="myInput" type="text" name="myCountry" placeholder="Country">
+                </div>
+              </div>-->
+
               <!--<a href="" ng-click="AddAuditArea()" class="btn btn-blue"> <img src="dist/img/icons/traffic-data.png" class="side_imgmaster mr-1">Add Audit Area</a>-->
             </div>
           </div>
           <!-- /.card-header -->
           <div class="card-body">
-            <table id="example2" class="table table-bordered table-hover">
+            <table id="" class="table table-bordered table-hover">
 
               <thead>
                 <tr class="now_rap text-center sticky_header">
@@ -206,7 +212,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
-
+              <button class="btn btn-success">Download PDF</button>
             </div>
           </div>
           <div class="card-body">
@@ -430,6 +436,9 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
             <!-- /.card-body -->
           </div>
           <div class="card-footer">
+            <button  class="btn btn-primary">View Summary Details</button>
+            <button  class="btn btn-success">Submit</button>
+
             <button ng-click="Back1()" class="btn btn-default">Back</button>
           </div>
 
@@ -550,7 +559,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="SaveAsDraft()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="SaveAsDraft()" class="btn btn-primary">Save as draft</button>
                             <button ng-click="AuditCreate()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
@@ -615,7 +624,7 @@ Hypothetical City, Kodaikanal" maxlength="200" disabled>
                             </div><!--row end-->
                           </div>
                           <div class="card-footer">
-                            <button ng-click="AddData()" class="btn btn-primary">Save as deaft</button>
+                            <button ng-click="AddData()" class="btn btn-primary">Save as draft</button>
                             <button ng-click="init()" class="btn btn-success">Submit</button>
                           </div>
                         </div>
