--- a/Modules/PendingPlan/PendingPlan.html
+++ b/Modules/PendingPlan/PendingPlan.html
@@ -1,5 +1,10 @@
 
-
+<style>
+  .modal-dialog {
+    max-width: 702px !IMPORTANT;
+  }
+  
+  </style>
 <section class="content pt-2">
   <div class="container-fluid">
 
@@ -19,12 +24,13 @@
 
                 <thead>
                   <tr class="now_rap text-center sticky_header">
-                    <th>Business Unit </th>
+                    <th>Vendor Code </th>
+                    <th>Vendor Name</th>
+                    <th>Location</th>
+                    <th>Any Other Location</th>
                     <th>Planned Start Date </th>
                     <th>Planned End Date</th>
-                    <th>Auditor </th>
-                    <th> VSA users</th>
-                    <th>Locations</th>
+
 
                     <th>Status </th>
 
@@ -36,16 +42,53 @@
                   <tr class="tbody_data">
 
 
+                    <td>VN123</td>
                     <td>Vendor</td>
+                    <td>Location</td>
+                    <td>Any Location</td>
                     <td>12-2-2022</td>
                     <td>12-4-2022</td>
-                    <td>abc</td>
-                    <td>abc</td>
-                    <td>abc</td>
                     <td><p class="pend_coloe backgr_blue">Pending </p></td>
-
                     <td>
-                      <a ng-click="PendingPlan()" data-toggle="modal" data-target="#exampleModal"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
+                      <p class="pend_coloe backgr_green" data-toggle="modal" data-target="#exampleModal">Accept </p>
+                      <p class="pend_coloe backgr_red" data-toggle="modal" data-target="#exampleModal">Reject </p>
+                    </td>
+
+
+
+                  </tr>
+                  <tr class="tbody_data">
+
+
+                    <td>VN123</td>
+                    <td>Vendor</td>
+                    <td>Location</td>
+                    <td>Any Location</td>
+                    <td>12-2-2022</td>
+                    <td>12-4-2022</td>
+                    <td><p class="pend_coloe backgr_blue">Pending </p></td>
+                    <td>
+                      <p class="pend_coloe backgr_green" data-toggle="modal" data-target="#exampleModal">Accept </p>
+                      <p class="pend_coloe backgr_red" data-toggle="modal" data-target="#exampleModal">Reject </p>
+                    </td>
+
+
+
+
+                  </tr>
+                  <tr class="tbody_data">
+
+
+                    <td>VN123</td>
+                    <td>Vendor</td>
+                    <td>Location</td>
+                    <td>Any Location</td>
+                    <td>12-2-2022</td>
+                    <td>12-4-2022</td>
+                    <td><p class="pend_coloe backgr_blue">Pending </p></td>
+                    <td>
+                      <p class="pend_coloe backgr_green" data-toggle="modal" data-target="#exampleModal">Accept </p>
+                      <p class="pend_coloe backgr_red" data-toggle="modal" data-target="#exampleModal">Reject </p>
                     </td>
 
 
@@ -53,17 +96,21 @@
                   <tr class="tbody_data">
 
 
+                    <td>VN123</td>
                     <td>Vendor</td>
+                    <td>Location</td>
+                    <td>Any Location</td>
                     <td>12-2-2022</td>
                     <td>12-4-2022</td>
-                    <td>abc</td>
-                    <td>abc</td>
-                    <td>abc</td>
                     <td><p class="pend_coloe backgr_blue">Pending </p></td>
 
+
                     <td>
-                      <a ng-click="PendingPlan()" data-toggle="modal" data-target="#exampleModal"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
+                      <p class="pend_coloe backgr_green" data-toggle="modal" data-target="#exampleModal">Accept </p>
+                      <p class="pend_coloe backgr_red" data-toggle="modal" data-target="#exampleModal">Reject </p>
                     </td>
+
+
 
                   </tr>
                 </tbody>
@@ -239,3 +286,22 @@
   </div>
 </section>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Remarks</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <textarea class="form-control" rows="3" placeholder="Enter Your Remark"></textarea>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
