--- a/Modules/ViewPlan/ViewPlan.html
+++ b/Modules/ViewPlan/ViewPlan.html
@@ -20,12 +20,13 @@
 
                 <thead>
                   <tr class="now_rap text-center sticky_header">
-                    <th>Business Unit </th>
+                    <th>Vendor Code </th>
+                    <th>Vendor Name</th>
+                    <th>Location</th>
+                    <th>Any Other Location</th>
                     <th>Planned Start Date </th>
                     <th>Planned End Date</th>
-                    <th>Auditor </th>
-                    <th> VSA users</th>
-                    <th>Locations</th>
+                  
 
                     <th>Status </th>
 
@@ -36,13 +37,13 @@
                 <tbody>
                   <tr class="tbody_data">
 
-
+                    <td>VN123</td>
                     <td>Vendor</td>
+                    <td>Location</td>
+                    <td>Any Location</td>
                     <td>12-2-2022</td>
                     <td>12-4-2022</td>
-                    <td>abc</td>
-                    <td>abc</td>
-                    <td>abc</td>
+                    
                     <td><p class="pend_coloe  backgr_blue">Pending </p></td>
 
                     <td>
@@ -54,14 +55,31 @@
                   </tr>
                   <tr class="tbody_data">
 
-
+                    <td>VN123</td>
                     <td>Vendor</td>
+                    <td>Location</td>
+                    <td>Any Location</td>
                     <td>12-2-2022</td>
                     <td>12-4-2022</td>
-                    <td>abc</td>
-                    <td>abc</td>
-                    <td>abc</td>
                     <td><p class="pend_coloe  backgr_green">Approve </p></td>
+
+                    <td>
+                      <a ng-click="ViewPlan()"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
+
+                      <a ng-click="Asign()" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="dist/img/icons/audit.png" class="viwe_iamge"></a>
+                    </td>
+
+                  </tr>
+                  <tr class="tbody_data">
+
+
+                    <td>VN123</td>
+                    <td>Vendor</td>
+                    <td>Location</td>
+                    <td>Any Location</td>
+                    <td>12-2-2022</td>
+                    <td>12-4-2022</td>
+                    <td><p class="pend_coloe  backgr_yellow">Auditor Assigend </p></td>
 
                     <td>
                       <a ng-click="ViewPlan()"><img src="dist/img/icon/view.png" class="viwe_iamge"></a>
