--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </li>
 
       </ul>
-   <h4>Vendor Management System</h4>
+      <h4>Vendor Management System</h4>
       <!-- Right navbar links -->
       <ul class="navbar-nav">
         <!-- Navbar Search -->
@@ -94,18 +94,18 @@
       <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel">
-        
-            <img src="dist/img/maruti-logo.png" class="w_190">
-         
+
+          <img src="dist/img/maruti-logo.png" class="w_190">
+
           <div class="info">
             <a href="#" class="d-block"></a>
-          </div> 
+          </div>
         </div>
         <!-- Sidebar Menu -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
-  with font-awesome or any other icon font library -->
+            with font-awesome or any other icon font library -->
             <li class="nav-item">
               <a href="#/" class="nav-link active">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -260,6 +260,8 @@
     </aside>
     <!-- /.control-sidebar -->
   </div>
+
+
   <!-- ./wrapper -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" integrity="sha512-6PM0qYu5KExuNcKt5bURAoT6KCThUmHRewN3zUFNaoI6Di7XJPTMoT6K0nsagZKk2OB4L7E3q1uQKHNHd4stIQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- jQuery -->
@@ -296,7 +298,7 @@
   <!-- AdminLTE for demo purposes -->
   <!--<script src="dist/js/demo.js"></script>-->
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-
+  <script type="text/javascript" src="Modules/Common/Auto-Complete.js"></script>
   <script src="JavaScript/AngularJS/angular.min.js"></script>
   <script src="JavaScript/AngularJS/angular-route.min.js"></script>
   <script src="JavaScript/AngularJS/angular-animate.min.js"></script>
@@ -354,8 +356,6 @@
 
 
 
-
-
   <script>
 
 
@@ -363,7 +363,7 @@
       $('[data-toggle="tooltip"]').tooltip()
     })
 
-  
+
   </script>
   <script>
     $(document).ready(function () {
@@ -372,6 +372,9 @@
         $(this).addClass("active");
       });
     });
+
+
   </script>
+
 </body>
 </html>
