--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </p>
               </a>
             </li>
-            <li class="nav-item" ng-show="RoleName=='Admin'">
+            <li class="nav-item">
               <a class="nav-link">
                 <img src="dist/img/icons/management.png" class="side_img">
                 <p>
@@ -180,7 +180,7 @@
                 </p>
               </a>
               <ul class="nav nav-treeview">
-                <li class="nav-item" ng-show="RoleName=='Admin'">
+                <li class="nav-item">
                   <a href="#/CreatePlan" class="nav-link">
                     <img src="dist/img/icons/lightbulb.png" class="side_img">
                     <p>
@@ -298,7 +298,7 @@
   <!-- AdminLTE for demo purposes -->
   <!--<script src="dist/js/demo.js"></script>-->
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script type="text/javascript" src="Modules/Common/Auto-Complete.js"></script>
+  <script src="Modules/Common/Auto-Complete.js"></script>
   <script src="JavaScript/AngularJS/angular.min.js"></script>
   <script src="JavaScript/AngularJS/angular-route.min.js"></script>
   <script src="JavaScript/AngularJS/angular-animate.min.js"></script>
