design cahnmges all files

--- a/Modules/Audit/Audit.html
+++ b/Modules/Audit/Audit.html
@@ -29,8 +29,10 @@
                   <td>Production preparation</td>
 
                   <td>
+                    <div class="d-flex">
                     <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                     <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                      </div>
                   </td>
                 </tr>
 
@@ -39,8 +41,10 @@
                   <td>Production preparation </td>
 
                   <td>
-                    <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
-                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                    <div class="d-flex">
+                      <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                      <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                      </div>
                   </td>
                 </tr>
                 <tr>
@@ -48,8 +52,10 @@
                   <td>Standards management</td>
 
                   <td>
-                    <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
-                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                    <div class="d-flex">
+                      <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                      <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                      </div>
                   </td>
                 </tr>
 
@@ -58,8 +64,10 @@
                   <td>Supplier control </td>
 
                   <td>
-                    <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
-                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                    <div class="d-flex">
+                      <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                      <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                      </div>
                   </td>
                 </tr>
               </tbody>
