--- a/Modules/EmployeeMaster/EmployeeMaster.html
+++ b/Modules/EmployeeMaster/EmployeeMaster.html
@@ -12,6 +12,7 @@
           </div>
           <!-- /.card-header -->
           <div class="card-body">
+            <div class="table-responsive">
             <table id="example2" class="table table-bordered table-hover">
               <thead>
                 <tr>
@@ -32,14 +33,17 @@
                 <td>12-2-2022</td>
 
                 <td>
+                  <div class="d-flex">
                   <a ng-click="AddEmployee()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                   <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                    </div>
                 </td>
               </tr>
               <tbody>
               </tbody>
             </table>
           </div>
+            </div>
           <!-- /.card-body -->
         </div>
         <!-- /.card -->
