--- a/Modules/PendingPlan/PendingPlan.html
+++ b/Modules/PendingPlan/PendingPlan.html
@@ -24,6 +24,7 @@
 
                 <thead>
                   <tr class="now_rap text-center sticky_header">
+                    <th>Audit No</th>
                     <th>Vendor Code </th>
                     <th>Vendor Name</th>
                     <th>Location</th>
@@ -41,7 +42,7 @@
                 <tbody>
                   <tr class="tbody_data">
 
-
+                    <td>AU1</td>
                     <td>VN123</td>
                     <td>Vendor</td>
                     <td>Location</td>
@@ -59,7 +60,7 @@
                   </tr>
                   <tr class="tbody_data">
 
-
+                    <td>AU1</td>
                     <td>VN123</td>
                     <td>Vendor</td>
                     <td>Location</td>
@@ -78,7 +79,7 @@
                   </tr>
                   <tr class="tbody_data">
 
-
+                    <td>AU1</td>
                     <td>VN123</td>
                     <td>Vendor</td>
                     <td>Location</td>
@@ -94,7 +95,7 @@
 
                   </tr>
                   <tr class="tbody_data">
-
+                    <td>AU1</td>
 
                     <td>VN123</td>
                     <td>Vendor</td>
@@ -106,6 +107,7 @@
 
 
                     <td>
+
                       <p class="pend_coloe backgr_green" data-toggle="modal" data-target="#exampleModal">Accept </p>
                       <p class="pend_coloe backgr_red" data-toggle="modal" data-target="#exampleModal">Reject </p>
                     </td>
