--- a/Modules/VendorMaster/VendorMaster.html
+++ b/Modules/VendorMaster/VendorMaster.html
@@ -12,6 +12,7 @@
           </div>
           <!-- /.card-header -->
           <div class="card-body">
+            <div class="table-responsive">
             <table id="example2" class="table table-bordered table-hover">
               <thead>
                 <tr>
@@ -35,13 +36,16 @@
                   <td>arvin@gmial.com</td>
                   <td>abchshhhss</td>
                   <td>
+                    <div class="d-flex">
                     <a ng-click="AddVender()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                     <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                      </div>
                   </td>
                 </tr>
               </tbody>
             </table>
           </div>
+            </div>
           <!-- /.card-body -->
         </div>
         <!-- /.card -->
