--- a/Modules/Regulation/Regulation.html
+++ b/Modules/Regulation/Regulation.html
@@ -12,50 +12,56 @@
           </div>
           <!-- /.card-header -->
           <div class="card-body">
-            <table id="example2" class="table table-bordered table-hover">
-              <thead>
-                <tr>
+            <div class="table-responsive">
+              <table id="example2" class="table table-bordered table-hover">
+                <thead>
+                  <tr>
 
-                  <th>Regulation Name </th>
-                  <th>Regulation Code</th>
-                  <th>Categories</th>
-                  <th>Audit Area</th>
-                  <th>Regulation Creation Date</th>
-                  <th>Action</th>
+                    <th>Regulation Name </th>
+                    <th>Regulation Code</th>
+                    <th>Categories</th>
+                    <th>Audit Area</th>
+                    <th>Regulation Creation Date</th>
+                    <th>Action</th>
 
 
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
-                  <td>12345</td>
-                  <td>Production preparation</td>
-                  <td>Regarding implementation rule of production preparation</td>
-                  <td>12-2-2022</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
+                    <td>12345</td>
+                    <td>Production preparation</td>
+                    <td>Regarding implementation rule of production preparation</td>
+                    <td>12-2-2022</td>
 
-                  <td>
-                    <a ng-click="AddRegulation()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
-                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
-                  <td>12345</td>
-                  <td>Production preparation</td>
-                  <td>Regarding implementation rule of production preparation</td>
-                  <td>12-2-2022</td>
+                    <td>
+                      <div class="d-flex">
+                        <a ng-click="AddRegulation()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                        <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Do you define in regulation following items for production preparation?-scope of parts,-responsibility of each department　-control contents/items?</td>
+                    <td>12345</td>
+                    <td>Production preparation</td>
+                    <td>Regarding implementation rule of production preparation</td>
+                    <td>12-2-2022</td>
 
-                  <td>
-                    <a ng-click="AddRegulation()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
-                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+                    <td>
+                      <div class="d-flex">
+                        <a ng-click="AddRegulation()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                        <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                        </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              </div>
+            </div>
+            <!-- /.card-body -->
           </div>
-          <!-- /.card-body -->
-        </div>
         <!-- /.card -->
         <!-- /.card -->
       </div>
