--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </li>
 
       </ul>
-      <h4>Vendor Management System</h4>
+      <h4 class="fon_16">Vendor Management System</h4>
       <!-- Right navbar links -->
       <ul class="navbar-nav">
         <!-- Navbar Search -->
@@ -211,7 +211,7 @@
 
               </ul>
             </li>
-            <li class="nav-item" ng-show="RoleName=='Admin'">
+            <li class="nav-item">
               <a href="#/ManageAudit" class="nav-link">
                 <img src="dist/img/icons/management.png" class="side_img">
                 <p>
