--- a/Modules/Audit/Audit.html
+++ b/Modules/Audit/Audit.html
@@ -12,9 +12,10 @@
           </div>
           <!-- /.card-header -->
           <div class="card-body">
+            <div class="table-responsive">
             <table id="example2" class="table table-bordered table-hover">
               <thead>
-                <tr>
+                <tr class="sticky_header">
 
                   <th>Audit Area Name </th>
                   <th>Category </th>
@@ -30,9 +31,9 @@
 
                   <td>
                     <div class="d-flex">
-                    <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
-                    <a><img src="dist/img/icons/delete.png" class="w_25"></a>
-                      </div>
+                      <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
+                      <a><img src="dist/img/icons/delete.png" class="w_25"></a>
+                    </div>
                   </td>
                 </tr>
 
@@ -44,7 +45,7 @@
                     <div class="d-flex">
                       <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                       <a><img src="dist/img/icons/delete.png" class="w_25"></a>
-                      </div>
+                    </div>
                   </td>
                 </tr>
                 <tr>
@@ -55,7 +56,7 @@
                     <div class="d-flex">
                       <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                       <a><img src="dist/img/icons/delete.png" class="w_25"></a>
-                      </div>
+                    </div>
                   </td>
                 </tr>
 
@@ -67,11 +68,29 @@
                     <div class="d-flex">
                       <a ng-click="AddAuditArea()"><img src="dist/img/icons/document-editor.png" class="w_25"></a>
                       <a><img src="dist/img/icons/delete.png" class="w_25"></a>
-                      </div>
+                    </div>
                   </td>
                 </tr>
               </tbody>
             </table>
+
+              </div><nav aria-label="Page navigation example">
+              <ul class="pagination justift_end">
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
           <!-- /.card-body -->
         </div>
