--- a/Modules/PendingPlan/PendingPlan.html
+++ b/Modules/PendingPlan/PendingPlan.html
@@ -14,6 +14,14 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Pending Plan Details</h3>
+              <div class="d-flex">
+
+                <input type="text" class="form-control mr-1" placeholder="search ...">
+                <button class="btn btn-success d-flex align-items-center">
+                  <i class="fas fa-upload mr-1 upload_ico"></i>
+                  <span class="now_rap">Upload Plan</span>
+                </button>
+              </div>
 
             </div>
           </div>
@@ -118,6 +126,23 @@
                 </tbody>
               </table>
             </div>
+            <nav aria-label="Page navigation example">
+              <ul class="pagination justift_end">
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
           <!-- /.card-body -->
         </div>
